add RPNcalculator TensorUtils and tests #25 #23